<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/settings_theme_label"/>
    <Spinner android:id="@+id/themeSpinner" android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/settings_font_size_label"/>
    <Spinner android:id="@+id/fontSpinner" android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/settings_language_label"/>
    <Spinner android:id="@+id/languageSpinner" android:layout_width="match_parent" android:layout_height="wrap_content"/>
</LinearLayout>
</ScrollView>
